data/exports/v1.0.0/MANIFEST.md
# Export manifest (1.0.0)

| # | 文件名 | 字节数 | SHA-256 |
|---:|---|---:|---|
| 1 | V1_1.0.0_EXPORT.xlsx | 139167 | dc7260c948124e0497850b976486f77fc2f4f824c6d449740195ab39c8409ecf |
| 2 | card_facts.csv | 11451 | 6b4fa5377fc350239a05e6597efe5f911578978643927ea9d9214db1c7382939 |
| 3 | card_sources.csv | 7352 | 1b80c47915f89e46be11c54aba7dd75d03f239b27d2844c2601540308a0c494b |
| 4 | content_cards.csv | 59461 | 73a2ca540a654a82443f7fe2abc60ffeb835764f8a7a6c102b579626aac6d6aa |
| 5 | data.json | 623712 | aa8781e4e9bdf4519166611f318d21c647f192b678a8bf16f32a386b8cbf6465 |
| 6 | entities.csv | 18144 | bb1bbb06499af2112e298fbc01fa0901d0479ed40202280d2fe365de11c5509e |
| 7 | entity_id_map.csv | 16823 | 8b449b56cad7176af6d55895582468b2e5d0e30b6560cca75ac95c24ef9c9eb7 |
| 8 | fact_sources.csv | 18901 | 399f242076dcdf1b11e0f174117e054e4878c727dac0795ab3fbfef959a4c1aa |
| 9 | facts.csv | 42156 | 3ad64bd84dac3cd5262e5ac99de3de949002447fdea536bc6545cc94653e0946 |
| 10 | gaps.csv | 3252 | 39333c879392cf8d2dacebdeb68d5c35b2fdc8dd201334d97c794ba9d2b43fc5 |
| 11 | legacy_relation_groups.csv | 4213 | f4b344e61606dde2b10891246ac4d654284823d90eb0e0d6b632d316d7f87a86 |
| 12 | metadata.csv | 1817 | a823cbd8e9f96516a5a2c0590c4a6958e27b24e8b1cfa32e161c225a0574d363 |
| 13 | n3_decisions.csv | 2848 | 57441d00ec9fbeaee5609a6c913f117a0bbdf498ee377f0ea4e34c2d9d93cf35 |
| 14 | relation_hold_evidence.csv | 8614 | 436aaf26730239b69e0a41f71f90a8a45547c80f6c5f778fa9fefc570d2c2ac8 |
| 15 | relation_holds.csv | 7090 | 66a989a535324a49b699905b6a69886d669df746f8d58bb1b7bbaec16bcd28c5 |
| 16 | relationship_evidence.csv | 18009 | c5007ad1a9415cca4dec55046c8dda7af1ba231a406d79d29bff855f2a2350ca |
| 17 | relationship_sources.csv | 1874 | 199e1fa21752fdca0e0831ca4b3c7a24af37cad05c590f756f189b1550d10d80 |
| 18 | relationships.csv | 12759 | 13f3a5286996076af51ba607c7204b6fe2846ca452999891912249b8c71106f7 |
| 19 | source_holds.csv | 613 | e6a9e0b034399b1156b48f7f17811f68b7e3e7a2f2329854a0f239627c909761 |
| 20 | sources.csv | 23033 | 5b0d6e7815e2113e97ea1e03821338b2ac00e40e86b757fd63119c127d034962 |
| 21 | MANIFEST.md | 2134 | SELF |
