data/exports/v1.0.1-rc5/MANIFEST.md
# Export manifest (v1.0.1-rc5)

| # | 文件名 | 字节数 | SHA-256 |
|---:|---|---:|---|
| 1 | V1_1.0.1-rc5_EXPORT.xlsx | 145263 | f231c5d2bd170b9fc2f1bfc7f8bb3b60c57c64fcaac96ee5946e18d8f7d54313 |
| 2 | V1_v1.0.1-rc5_EXPORT.xlsx | 145936 | 9f435c0b7e81fa42d7ba24c18124657c954344a5c9e8601ddee62fe5e8f614f1 |
| 3 | card_facts.csv | 11451 | 6b4fa5377fc350239a05e6597efe5f911578978643927ea9d9214db1c7382939 |
| 4 | card_sources.csv | 7352 | 1b80c47915f89e46be11c54aba7dd75d03f239b27d2844c2601540308a0c494b |
| 5 | content_cards.csv | 59461 | 73a2ca540a654a82443f7fe2abc60ffeb835764f8a7a6c102b579626aac6d6aa |
| 6 | data.json | 649378 | b4722f983618a3dbfa113e42821b62e22c6cf681df261a4c36a7f2b18755b388 |
| 7 | entities.csv | 18144 | bb1bbb06499af2112e298fbc01fa0901d0479ed40202280d2fe365de11c5509e |
| 8 | entity_id_map.csv | 16823 | 8b449b56cad7176af6d55895582468b2e5d0e30b6560cca75ac95c24ef9c9eb7 |
| 9 | fact_sources.csv | 20325 | 9cbb137d85a5f618eb9ed3e888af1cada4b2b3658d4d61d29f7b6cf9d25c8ed4 |
| 10 | facts.csv | 47321 | 83e5ef1773f705a12333b672a85f7230d3fc193e79045ffe35ad670fd1f87e3a |
| 11 | gaps.csv | 3252 | 39333c879392cf8d2dacebdeb68d5c35b2fdc8dd201334d97c794ba9d2b43fc5 |
| 12 | legacy_relation_groups.csv | 4213 | f4b344e61606dde2b10891246ac4d654284823d90eb0e0d6b632d316d7f87a86 |
| 13 | metadata.csv | 1870 | 50f3a064174eb60dbf53b384d3799bc637a708dc97a50309a6c69c8a494b5101 |
| 14 | migration_log.csv | 360 | dd938082197126276aafb4b369a3d662bce787a3721e332b1c302e936d0a97f3 |
| 15 | n3_decisions.csv | 2848 | 57441d00ec9fbeaee5609a6c913f117a0bbdf498ee377f0ea4e34c2d9d93cf35 |
| 16 | relation_hold_evidence.csv | 8614 | 436aaf26730239b69e0a41f71f90a8a45547c80f6c5f778fa9fefc570d2c2ac8 |
| 17 | relation_holds.csv | 7090 | 66a989a535324a49b699905b6a69886d669df746f8d58bb1b7bbaec16bcd28c5 |
| 18 | relationship_evidence.csv | 18009 | c5007ad1a9415cca4dec55046c8dda7af1ba231a406d79d29bff855f2a2350ca |
| 19 | relationship_sources.csv | 1874 | 199e1fa21752fdca0e0831ca4b3c7a24af37cad05c590f756f189b1550d10d80 |
| 20 | relationships.csv | 12759 | 13f3a5286996076af51ba607c7204b6fe2846ca452999891912249b8c71106f7 |
| 21 | source_holds.csv | 613 | e6a9e0b034399b1156b48f7f17811f68b7e3e7a2f2329854a0f239627c909761 |
| 22 | sources.csv | 27141 | b8c982b508ab4452346af3106e35795265d7a7891864861687e513a250071f66 |
| 23 | MANIFEST.md | 2354 | SELF |
